--- a/languages/culture-object-de_DE.po
+++ b/languages/culture-object-de_DE.po
@@ -8,7 +8,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2015-11-22 15:16-0500\n"
+"PO-Revision-Date: 2015-12-20 18:49-0500\n"
 "Last-Translator: lgladdy <liam@gladdy.co.uk>\n"
 "Language-Team: German\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
@@ -144,11 +144,11 @@ msgstr "Bilder importieren"
 #. Translators: %s: The name of the provider developer
 #: CultureObject/Settings.class.php:47
 msgid "The activated provider plugin claims to support remappable fields, but doesn't provide the list of remappable fields. This should never happen in a production environment. Please contact the provider developer, %s. To stop this breaking your site, the provider has been disabled."
-msgstr ""
+msgstr "Das aktivierte Provider Plugin behauptet änderbare Felder unterstützen, aber hat keine Liste dieser änderbaren Felder. Dies sollte niemals live passieren. Bitte kontaktieren Sie den Entwickler, %s. Um das funktionieren ihrer Seite zu gewährleisten wurde der Provider deaktiviert."
 
 #: CultureObject/Settings.class.php:76 views/settings.php:11
 msgid "Culture Object Settings"
-msgstr ""
+msgstr "Cuture Object Einstellungen"
 
 #: CultureObject/Settings.class.php:80 providers/AdLib/AdLib.class.php:35
 #: providers/CSV/CSV.class.php:36
@@ -156,15 +156,15 @@ msgstr ""
 #: providers/CultureGrid/CultureGrid.class.php:19
 #: providers/Emu/Emu.class.php:35 providers/RAMM/RAMM.class.php:19
 msgid "Provider Settings"
-msgstr ""
+msgstr "Provider Einstellungen"
 
 #: CultureObject/Settings.class.php:133
 msgid "These settings relate to the overall plugin and how it works."
-msgstr ""
+msgstr "Diese Einstellungen beziehen sich auf das gesamte Plugin und wie es funktioniert."
 
 #: CultureObject/Settings.class.php:137
 msgid "Your plugin provider supports remappable fields. You can override the default display name for each field imported."
-msgstr ""
+msgstr "Ihr Plugin Provider unterstützt änderbare Felder. Sie können den standardmäßigen Anzeigenamen für jedes importierte Feld überschreiben."
 
 #: CultureObject/Settings.class.php:139
 msgid "Your plugin provider supports remappable fields, but your theme does not declare support. If you are a theme developer, see the CultureObject documentation for more details."
